tests/dockerfile/graph_builder/checks/resources/EnvNpmConfigStrictSsl/fail/Dockerfile.run.quotes
FROM node:18

RUN NPM_CONFIG_STRICT_SSL=false TEST="lol\"" npm ci
RUN NPM_CONFIG_STRICT_SSL="false" TEST='lol\'' npm ci

RUN LOL="123\"" npm_config_strict_ssl="false" npm ci
RUN LOL='123\'' npm_config_strict_ssl='false' npm ci
